switched variants to VariantHolder